# TpgVvcPartDatabase

./: .gitignore  CMakeLists.txt  README.md  REMARQUES.md  params.json  paramsKelly.json  transfer.sh
BestPolicies/: 1_out_0151_373.dot  2_out_0134_380.dot  3_out_0300_333_Debug.dot
TPG/: BTH.dot  BTV.dot  NP.dot  QT.dot  TTH.dot  TTV.dot  params.json
include/: PartCU.h  classBinaryEnv.h  defaultBinaryEnv.h
include/binary/: ClassBinaryEnv.h  DefaultBinaryEnv.h  classBinaryEnv.h  defaultBinaryEnv.h
include/classification/: ClassEnv.h  PartCU.h
include/features/: BinaryFeaturesEnv.h  FeaturesEnv.h
src/: PartCU.cpp  binaryTPGs.cpp  classBinaryEnv.cpp  defaultBinaryEnv.cpp  exampleImportTPG.cpp  main.cpp
src/binary/: ClassBinaryEnv.cpp  DefaultBinaryEnv.cpp  binaryTPGs.cpp  classBinaryEnv.cpp  defaultBinaryEnv.cpp  inferenceBinaryTPGs.cpp
src/classification/: ClassEnv.cpp  PartCU.cpp  classTPG.cpp  classifTPG.cpp
src/features/: BinaryFeaturesEnv.cpp  FeaturesEnv.cpp  binaryFeaturesTPG.cpp  featuresTPG.cpp  inferenceBinaryFeaturesTPGs.cpp
